--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1590,7 +1590,7 @@ div.owl-controls, .owl-controls div {
 
 ----------------------------------------------------------------------------- */
 .news-bg-1 {
-  background-image: url(../img/latest-news/news-bg-1.jpg);
+  background-image: url(news-bg-1.jpg);
 }
 
 .news-bg-2 {
