--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1594,11 +1594,11 @@ div.owl-controls, .owl-controls div {
 }
 
 .news-bg-2 {
-  background-image: url(../img/latest-news/news-bg-2.jpg);
+  background-image: url(news-bg-2.jpg);
 }
 
 .news-bg-3 {
-  background-image: url(../img/latest-news/news-bg-3.jpg);
+  background-image: url(news-bg-3.jpg);
 }
 
 .news-bg-4 {
